syntax="proto3";

option go_package = "./genproto/dashboardpb";

service DashboardService {
    rpc GetDashboardReport(GetDashboardReportRequest) returns (GetDashboardReportResponse);
}

message GetDashboardReportRequest {}

message GetDashboardReportResponse {
    int64 total_sales = 1;
    int64 total_cost_price = 2;
    int64 total_net_profit = 3;
    int64 total_units_sold = 4;
}